updated address controller and added basket

--- a/e-commerce platform/e-commerce platform/Views/Products/Index.cshtml
+++ b/e-commerce platform/e-commerce platform/Views/Products/Index.cshtml
@@ -67,6 +67,9 @@
                 <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ProductID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
+               
+                    <a asp-action="AddToBasket" asp-controller="Basket" asp-route-productId="@item.ProductID" class="btn btn-primary">Add to Basket</a>
+                
             </td>
         </tr>
 }
